doc/k8s/demo-web/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website
spec:
  replicas: 1
  selector:
    matchLabels:
      app: website
  template:
    metadata:
      labels:
        app: website
    spec:
      containers:
      - name: website
        image: registry.mydomain/demo/demo-web:1.0.0
        ports:
        - containerPort: 8081
