doc/k8s/demo-web/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: website
  name: website
spec:
  clusterIP:
  externalTrafficPolicy: Cluster
  ports:
  - name: tcp-8081-8081
    port: 8081
    protocol: TCP
    targetPort: 8081
  selector:
    app: website
  sessionAffinity: None
  type: NodePort
